previous/all-ingresses.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"nginx","nginx.ingress.kubernetes.io/backend-protocol":"HTTP","nginx.ingress.kubernetes.io/rewrite-target":"/","nginx.ingress.kubernetes.io/ssl-redirect":"true"},"name":"argocd-server-ingress","namespace":"argocd"},"spec":{"rules":[{"host":"argocd.local","http":{"paths":[{"backend":{"service":{"name":"argocd-server","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}],"tls [...]
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/backend-protocol: HTTP
      nginx.ingress.kubernetes.io/rewrite-target: /
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: "2025-11-13T20:03:30Z"
    generation: 1
    name: argocd-server-ingress
    namespace: argocd
    resourceVersion: "9593"
    uid: 7a3f1c76-453d-4470-b08e-98245cb11065
  spec:
    rules:
    - host: argocd.local
      http:
        paths:
        - backend:
            service:
              name: argocd-server
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - argocd.local
      secretName: wsl-tls
  status:
    loadBalancer: {}
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"nginx","nginx.ingress.kubernetes.io/backend-protocol":"HTTP","nginx.ingress.kubernetes.io/rewrite-target":"/","nginx.ingress.kubernetes.io/ssl-redirect":"true"},"name":"demo-nginx-ingress","namespace":"demo"},"spec":{"rules":[{"host":"demo.local","http":{"paths":[{"backend":{"service":{"name":"demo-nginx","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts [...]
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/backend-protocol: HTTP
      nginx.ingress.kubernetes.io/rewrite-target: /
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: "2025-11-13T20:03:30Z"
    generation: 1
    name: demo-nginx-ingress
    namespace: demo
    resourceVersion: "9595"
    uid: 135c85e3-917d-49b4-9d36-18dd4e63148f
  spec:
    rules:
    - host: demo.local
      http:
        paths:
        - backend:
            service:
              name: demo-nginx
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - demo.local
      secretName: wsl-tls
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
